<resources>
    <string name="app_name">Miza</string>
    <string name="tabhome_destaque">Destaque</string>
    <string name="tabhome_departamento">Departamento</string>
    <string name="home">Home</string>
    <string name="supermercados">Supermercados</string>
    <string name="configuracoes">Configurações</string>
    <string name="sobre">Sobre</string>
    <string name="suaconta">Sua Conta</string>
    <string name="usuario">username</string>
    <string name="email">Email</string>
    <string name="acessar_conta">Acessar Conta</string>
    <string name="senha">Senha</string>
    <string name="login_incorreto">Email ou senha incorretos</string>
    <string name="fazer_cadastro">Fazer Cadastro</string>
    <string name="recuperar_senha">Esqueceu email?</string>
    <string name="cancelar">Cancelar</string>
    <string name="entrar">Entrar</string>
    <string name="repetir_senha">Repeta a Senha</string>
    <string name="nome_usuario">Nome</string>
    <string name="ser_chamado">Nome de Usuário</string>
    <string name="fazer_login">Fazer Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="detalhes_conta">Detalhes da sua conta</string>
    <string name="excluir_conta">Excluir conta</string>
    <string name="sair">Sair</string>
    <string name="listas">Acessar Listas</string>
    <string name="salvar">Salvar</string>


</resources>
