<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/layout_login"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
        <TextView
            android:id="@+id/tv_login_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/email"
            android:layout_marginTop="@dimen/margem_superior_cadastro"
            android:layout_marginLeft="@dimen/margem_esquerda_cadastro"
            />

        <EditText
            android:id="@+id/et_login_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_login_usuario"
            android:layout_below="@+id/tv_login_usuario"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            android:inputType="textEmailAddress"
            />
        <TextView
            android:id="@+id/tv_senha_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_login_usuario"
            android:layout_below="@id/et_login_usuario"
            android:text="@string/senha"
            />
        <EditText
            android:id="@+id/et_senha_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_login_usuario"
            android:layout_below="@id/tv_senha_usuario"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/tv_login_incorreto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_senha_usuario"
            android:text="@string/login_incorreto"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/tv_fazer_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_login_usuario"
            android:layout_below="@id/tv_login_incorreto"
            android:text="@string/fazer_cadastro"
            />
        <TextView
            android:id="@+id/tv_recuperar_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_login_incorreto"
            android:text="@string/recuperar_senha"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            />
        <Button
            android:id="@+id/bt_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_fazer_cadastro"
            android:text="@string/cancelar"
            android:layout_toLeftOf="@id/bt_entrar"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            />
        <Button
            android:id="@+id/bt_entrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_fazer_cadastro"
            android:text="@string/entrar"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            />
    </RelativeLayout>

</LinearLayout>
