<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:id="@+id/layout_cadastro"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >
        <TextView
            android:id="@+id/tv_cadastro_email_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/email"
            android:layout_marginTop="@dimen/margem_superior_cadastro"
            android:layout_marginLeft="@dimen/margem_esquerda_cadastro"
            />

        <EditText
            android:id="@+id/et_cadastro_email_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_cadastro_email_usuario"
            android:layout_below="@+id/tv_cadastro_email_usuario"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            android:inputType="textEmailAddress"
            />
        <TextView
            android:id="@+id/tv_cadastro_senha_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_cadastro_email_usuario"
            android:layout_below="@id/et_cadastro_email_usuario"
            android:text="@string/senha"
            />
        <EditText
            android:id="@+id/et_cadastro_senha_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_cadastro_email_usuario"
            android:layout_below="@id/tv_cadastro_senha_usuario"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/tv_cadastro_repetir_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_cadastro_email_usuario"
            android:layout_below="@+id/et_cadastro_senha_usuario"
            android:text="@string/repetir_senha"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            />
        <EditText
            android:id="@+id/et_cadastro_repetir_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/tv_cadastro_email_usuario"
            android:layout_below="@+id/tv_cadastro_repetir_senha"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            android:inputType="textPassword"
            />
        <TextView
            android:id="@+id/tv_cadastro_nome_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_cadastro_email_usuario"
            android:layout_below="@+id/et_cadastro_repetir_senha"
            android:text="@string/nome_usuario"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            />
        <EditText
            android:id="@+id/et_cadastro_nome_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_cadastro_email_usuario"
            android:layout_below="@+id/tv_cadastro_nome_usuario"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            />
        <TextView
            android:id="@+id/tv_cadastro_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_cadastro_email_usuario"
            android:layout_below="@+id/et_cadastro_nome_usuario"
            android:text="@string/ser_chamado"
            />
        <EditText
            android:id="@+id/et_cadastro_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_cadastro_email_usuario"
            android:layout_below="@+id/tv_cadastro_username"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            />
        <TextView
            android:id="@+id/tv_cadastro_fazer_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_cadastro_username"
            android:text="@string/fazer_login"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margem_direita_cadastro"
            />
        <Button
            android:id="@+id/bt_cadastro_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_cadastro_fazer_login"
            android:text="@string/cancelar"
            android:layout_toLeftOf="@id/bt_cadastrar"
            android:layout_marginRight="@dimen/margem_direita_login"
            />
        <Button
            android:id="@+id/bt_cadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_cadastro_fazer_login"
            android:text="@string/cadastrar"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margem_direita_login"
            />
    </RelativeLayout>
</LinearLayout>