<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/lyt_sua_conta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_conta"
            android:layout_width="121dp"
            android:layout_height="115dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:src="@mipmap/ic_launcher_round"
            />
        <ImageView
            android:id="@+id/iv_editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_edit"
            />
        <TextView
            android:id="@+id/tv_usuario_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_conta"
            android:layout_marginLeft="10dp"
            android:text="@string/nome_usuario"
            />

        <EditText
            android:id="@+id/et_usuario_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_usuario_nome"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:enabled="false"
            />
        <TextView
            android:id="@+id/tv_usuario_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_usuario_nome"
            android:layout_marginLeft="10dp"
            android:text="@string/email"
            />
        <EditText
            android:id="@+id/et_usuario_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_usuario_email"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:enabled="false"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_usuario_senha"
            android:layout_below="@+id/et_usuario_email"
            android:text="@string/senha"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_usuario_senha"
            android:layout_below="@+id/tv_usuario_senha"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textPassword"
            android:enabled="false"
            />
        <Button
            android:id="@+id/bt_cancelar_edit"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_usuario_senha"
            android:text="@string/cancelar"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/bt_salvar_edit"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/bt_cancelar_edit"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/et_usuario_senha"
            android:layout_centerHorizontal="true"
            android:text="@string/salvar"
            android:layout_marginRight="10dp"
            android:visibility="gone"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_weight="0.2">

        <Button
            android:id="@+id/bt_conta_excluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/excluir_conta"
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"

            />

        <Button
            android:id="@+id/bt_conta_sair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sair"
            android:layout_weight="0.5"
            android:layout_marginRight="10dp"
            />
    </LinearLayout>

</LinearLayout>
